test/users/shetag/tensorForall.good
tensorForall.chpl:1: error: 'i' undeclared (first use this function)
