test/users/shetag/tensorForall.chpl
for (i,j) in {1..3, 1..i} do
  writeln(i," ",j);
